# QuantEmul

./: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt.user.0000000  QuantEmul.kdev4  README.md  hilbert_space.cpp  hilbert_space.h  hilbertspace.cpp  hilbertspace.h  kronecker_tensor.cpp  kronecker_tensor.h  main.cpp  main_helper.cpp  main_helper.h  measurement.cpp  measurement.h  quantum_state.cpp  quantum_state.h  quantumstate.cpp  quantumstate.h  test_main.cpp  unitary_transformation.cpp  unitary_transformation.h  unitarytransformation.cpp  unitarytransformation.h
.kdev4/: QuantEmul.kdev4  _custom.kdev4
controllers/: index_controller.cpp  index_controller.h
models/: hilbert_space.h  kronecker_tensor.cpp  kronecker_tensor.h  measurement.cpp  measurement.h  quantum_state.h  unitary_transformation.cpp  unitary_transformation.h
models/test/: kronecker_tensor_test.cpp  test.cpp  transformationstest.cpp  unitary_transformation_test.cpp
models/transforms/: controlledugate.cpp  controlledugate.h  hadamardgate.cpp  hadamardgate.h  pauligate.h  phaseshiftgate.cpp  phaseshiftgate.h  swapgate.cpp  swapgate.h  toffoligate.cpp  toffoligate.h
test/: hilbert_space_test.cpp  hilbertspacetest.cpp  kronecker_tensor_test.cpp  measurementtest.cpp  quantum_state_test.cpp  quantumstatetest.cpp  unitary_transformation_test.cpp  unitarytransformationtest.cpp
transforms/: controlledugate.cpp  controlledugate.h  hadamardgate.cpp  hadamardgate.h  pauligate.cpp  pauligate.h  phaseshiftgate.cpp  phaseshiftgate.h  swapgate.cpp  swapgate.h  toffoligate.cpp  toffoligate.h
views/: index_view.cpp  index_view.h
